[project] try correct popup on mobile

--- a/css/projects.css
+++ b/css/projects.css
@@ -57,6 +57,8 @@ section{
 	height: 90vh;
 	overflow: auto;
 	text-align: center;
+	padding-top: env(safe-area-inset-top);
+  	padding-bottom: env(safe-area-inset-bottom);
 }
 
 .popup, .overlay {
